--- a/src/Out-GridView/Views/MainWindow.xaml
+++ b/src/Out-GridView/Views/MainWindow.xaml
@@ -3,5 +3,11 @@
     xmlns:vm="clr-namespace:OutGridView.ViewModels;assembly=OutGridView" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:views="clr-namespace:OutGridView.ViewModels" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Content="{Binding PsObjects}" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="OutGridView">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="OutGridView">
+    <StackPanel>
+        <TextBox Text="{Binding SearchText}" />
+        <UserControl Content="{Binding FilterQueryBuilder}"/>
+        <UserControl Content="{Binding DataGridView}"/>
+    </StackPanel>
 </Window>
+ 
