--- a/src/Out-GridView/Views/FilterQueryBuilderView.xaml
+++ b/src/Out-GridView/Views/FilterQueryBuilderView.xaml
@@ -2,36 +2,38 @@
   xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
   xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
   xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.FilterQueryBuilderView">
-  <StackPanel Background="#AA000000">
-    <StackPanel Orientation="Horizontal">
-      <ItemsControl Items="{Binding FiltersByPropertyInfoView}">
-        <ItemsControl.ItemsPanel>
-          <ItemsPanelTemplate>
-            <StackPanel Orientation="Horizontal" Background="#10BFE2" />
-          </ItemsPanelTemplate>
-        </ItemsControl.ItemsPanel>
-        <ItemsControl.ItemTemplate>
-          <DataTemplate>
-            <StackPanel>
-              <TextBlock Text="{Binding Key.Name}"/>
-              <ItemsControl Items="{Binding Items}">
-                <ItemsControl.ItemTemplate>
-                  <DataTemplate>
-                    <StackPanel Orientation="Horizontal" Background="#DE7B25">
-                      <ComboBox Items="{Binding Operators}" SelectedItem="{Binding Operator}"/>
-                      <TextBox Text="{Binding Value}"/>
-                      <Button Command="{Binding $parent[UserControl].DataContext.RemoveFilterCommand}" CommandParameter="{Binding .}">Remove</Button>
-                    </StackPanel>
-                  </DataTemplate>
-                </ItemsControl.ItemTemplate>
-              </ItemsControl>
-              <Button Command="{Binding $parent[UserControl].DataContext.AddFilterCommand}" CommandParameter="{Binding Key}"> Add Filter </Button>
-            </StackPanel>
-          </DataTemplate>
-        </ItemsControl.ItemTemplate>
-      </ItemsControl>
-      <ComboBox Items="{Binding VisiblePropertyOptions}" Name="AddFilterComboxBox" SelectedItem="{Binding SelectedAddColumn}" />
-      <Button Command="{Binding ClearFiltersCommand}" Content="Clear Filters"/>
-    </StackPanel>
-  </StackPanel>
+  <DockPanel>
+    <TextBlock DockPanel.Dock="Top" Text="Filters" />
+    <ItemsControl Items="{Binding FiltersByPropertyInfoView}" DockPanel.Dock="Left">
+      <ItemsControl.ItemsPanel>
+        <ItemsPanelTemplate>
+          <StackPanel Orientation="Horizontal" />
+        </ItemsPanelTemplate>
+      </ItemsControl.ItemsPanel>
+      <ItemsControl.ItemTemplate>
+        <DataTemplate>
+          <DockPanel>
+            <TextBlock Text="{Binding Key.Name}" DockPanel.Dock="Top" Height="30" />
+            <Button Command="{Binding $parent[UserControl].DataContext.AddFilterCommand}" CommandParameter="{Binding Key}" DockPanel.Dock="Bottom"> Add Filter </Button>
+            <ItemsControl Items="{Binding Items}">
+              <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                  <StackPanel Orientation="Horizontal" Background="#DE7B25">
+                    <ComboBox Items="{Binding Operators}" SelectedItem="{Binding Operator}" MinWidth="75"/>
+                    <TextBox Text="{Binding Value}" MinWidth="100"/>
+                    <Button Command="{Binding $parent[UserControl].DataContext.RemoveFilterCommand}" CommandParameter="{Binding .}">Remove</Button>
+                  </StackPanel>
+                </DataTemplate>
+              </ItemsControl.ItemTemplate>
+            </ItemsControl>
+          </DockPanel>
+        </DataTemplate>
+      </ItemsControl.ItemTemplate>
+    </ItemsControl>
+    <DockPanel>
+      <Button Command="{Binding ClearFiltersCommand}" Content="Clear Filters" DockPanel.Dock="Right"/>
+      <Button Content="Show Code" DockPanel.Dock="Right"/>
+      <ComboBox Items="{Binding VisiblePropertyOptions}" Name="AddFilterComboxBox" MaxWidth="200" SelectedItem="{Binding SelectedAddColumn}" MemberSelector="Name" Height="30" DockPanel.Dock="Left"/>
+    </DockPanel>
+  </DockPanel>
 </UserControl>
