--- a/src/Out-GridView/Views/MainWindow.xaml
+++ b/src/Out-GridView/Views/MainWindow.xaml
@@ -3,12 +3,58 @@
     xmlns:vm="clr-namespace:OutGridView.ViewModels;assembly=OutGridView" 
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:views="clr-namespace:OutGridView.ViewModels" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="OutGridView" Padding="5">
-    <StackPanel>
-        <TextBlock Text="Quick Search"/>
-        <TextBox Text="{Binding SearchText}" />
-        <UserControl Content="{Binding FilterQueryBuilder}" Margin="0,10,0,0"/>
-        <UserControl Content="{Binding DataGridView}" Margin="0,10,0,0"/>
-    </StackPanel>
+    xmlns:converters="clr-namespace:OutGridView.Converters" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="OutGridView">
+    <Window.Resources>
+        <converters:EnumToDescriptionConverter x:Key="EnumDescriptionConverter"/>
+    </Window.Resources>
+    <Window.Styles>
+        <Style Selector="TextBlock.h1">
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="FontWeight" Value="Medium" />
+        </Style>
+        <Style Selector="Button">
+            <Setter Property="Height" Value="24" />
+            <Setter Property="FontSize" Value="12" />
+            <Setter Property="Margin" Value="10 0 0 0"/>
+        </Style>
+        <Style Selector="Button.primary">
+            <Setter Property="Background" Value="#0078D4"/>
+            <Setter Property="BorderBrush" Value="#000000"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Foreground" Value="#ffffff" />
+        </Style>
+        <Style Selector="Button.primary:pointerover">
+            <Setter Property="Background" Value="#0066cc"/>
+        </Style>
+        <Style Selector="Button.secondary">
+            <Setter Property="Background" Value="#ffffff"/>
+            <Setter Property="Foreground" Value="#000000" />
+            <Setter Property="BorderBrush" Value="#000000"/>
+        </Style>
+        <Style Selector="Button.secondary:pointerover">
+            <Setter Property="Background" Value="#F3F2F1"/>
+            <Setter Property="BorderBrush" Value="#000000"/>
+        </Style>
+        <Style Selector="Button.secondary:pressed">
+            <Setter Property="Background" Value="#EDEBE9"/>
+        </Style>
+    </Window.Styles>
+    <Grid ColumnDefinitions="*" RowDefinitions="50,auto,*,auto">
+        <StackPanel Grid.Row="0" Margin="5">
+            <TextBlock Classes="h1" Text="Quick Search"/>
+            <TextBox Text="{Binding SearchText}" />
+        </StackPanel>
+        <UserControl Grid.Row="1" Content="{Binding FilterQueryBuilder}" />
+        <UserControl Grid.Row="2" Content="{Binding DataGridView}" />
+        <Border BorderThickness="0,1,0,0" BorderBrush="#000000" Grid.Row="3">
+            <DockPanel Margin="5">
+                <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
+                    <Button Classes="primary" Command="{Binding PassThruOkCommand}">Export</Button>
+                    <Button Classes="secondary" Command="{Binding PassThruCancelCommand}">Cancel</Button>
+                </StackPanel>
+            </DockPanel>
+        </Border>
+    </Grid>
 </Window>
- 
+  
