--- a/src/Out-GridView/Views/MainWindow.xaml
+++ b/src/Out-GridView/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:views="clr-namespace:OutGridView.ViewModels" 
     xmlns:converters="clr-namespace:OutGridView.Converters" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="OutGridView">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="{Binding Title}">
     <Window.Resources>
         <converters:EnumToDescriptionConverter x:Key="EnumDescriptionConverter"/>
     </Window.Resources>
@@ -27,6 +27,10 @@
         <Style Selector="Button.primary:pointerover">
             <Setter Property="Background" Value="#0066cc"/>
         </Style>
+        <!-- /template/ ContentPresenter targeting required until Avalonia 0.9.0 releases -->
+        <Style Selector="Button.primary:pressed /template/ ContentPresenter">
+            <Setter Property="Background" Value="#005a9e"/>
+        </Style>
         <Style Selector="Button.secondary">
             <Setter Property="Background" Value="#ffffff"/>
             <Setter Property="Foreground" Value="#000000" />
@@ -36,8 +40,24 @@
             <Setter Property="Background" Value="#F3F2F1"/>
             <Setter Property="BorderBrush" Value="#000000"/>
         </Style>
-        <Style Selector="Button.secondary:pressed">
+        <Style Selector="Button.secondary:pressed /template/ ContentPresenter">
             <Setter Property="Background" Value="#EDEBE9"/>
+        </Style>
+        <Style Selector="Button.negative">
+            <Setter Property="Background" Value="#d13438"/>
+            <Setter Property="Foreground" Value="#ffffff" />
+            <Setter Property="BorderBrush" Value="#000000"/>
+            <Setter Property="BorderThickness" Value="0"/>
+        </Style>
+        <Style Selector="Button.negative:pointerover">
+            <Setter Property="Background" Value="#bc2f34"/>
+            <Setter Property="BorderBrush" Value="#000000"/>
+        </Style>
+        <Style Selector="Button.negative:pressed /template/ ContentPresenter">
+            <Setter Property="Background" Value="#9f282c"/>
+        </Style>
+        <Style Selector="TextBox.borderless">
+            <Setter Property="BorderThickness" Value="0"/>
         </Style>
     </Window.Styles>
     <Grid ColumnDefinitions="*" RowDefinitions="50,auto,*,auto">
@@ -47,7 +67,7 @@
         </StackPanel>
         <UserControl Grid.Row="1" Content="{Binding FilterQueryBuilder}" />
         <UserControl Grid.Row="2" Content="{Binding DataGridView}" />
-        <Border BorderThickness="0,1,0,0" BorderBrush="#000000" Grid.Row="3">
+        <Border BorderThickness="0,1,0,0" BorderBrush="#000000" Grid.Row="3" IsVisible="{Binding IsPassThruEnabled}">
             <DockPanel Margin="5">
                 <StackPanel HorizontalAlignment="Right" Orientation="Horizontal">
                     <Button Classes="primary" Command="{Binding PassThruOkCommand}">Export</Button>
