--- a/src/OutGridView.Gui/Views/MainWindow.xaml
+++ b/src/OutGridView.Gui/Views/MainWindow.xaml
@@ -4,7 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
     xmlns:views="clr-namespace:OutGridView.Application.ViewModels" 
     xmlns:converters="clr-namespace:OutGridView.Application.Converters" Name="MainWindow" 
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450" x:Class="OutGridView.Application.Views.MainWindow" Icon="/Assets/avalonia-logo.ico" Title="{Binding Title}">
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" mc:Ignorable="d" Height="600" SizeToContent="Width" x:Class="OutGridView.Application.Views.MainWindow" Icon="/Assets/Powershell_black.ico" Title="{Binding Title}">
     <Window.Resources>
         <converters:EnumToDescriptionConverter x:Key="EnumDescriptionConverter"/>
     </Window.Resources>
