--- a/src/GraphicalTools.Gui/App.xaml
+++ b/src/GraphicalTools.Gui/App.xaml
@@ -1,6 +1,6 @@
 <Application xmlns="https://github.com/avaloniaui" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" 
-    xmlns:local="clr-namespace:OutGridView" x:Class="OutGridView.Application.App">
+    xmlns:local="clr-namespace:GraphicalTools" x:Class="GraphicalTools.Application.App">
     <Application.DataTemplates>
         <local:ViewLocator/>
     </Application.DataTemplates>
