--- a/src/OutGridView.Gui/App.xaml
+++ b/src/OutGridView.Gui/App.xaml
@@ -7,7 +7,7 @@
 
     <Application.Styles>
         <StyleInclude Source="avares://Avalonia.Themes.Default/DefaultTheme.xaml"/>
-        <StyleInclude Source="avares://Avalonia.Themes.Default/Accents/BaseLight.xaml"/>
+        <StyleInclude Source="/Style.xaml"/>
         <StyleInclude Source="resm:Avalonia.Controls.DataGrid.Themes.Default.xaml?assembly=Avalonia.Controls.DataGrid"/>
     </Application.Styles>
 </Application>
